--- a/SEA_Application/Views/AspnetQuestions/ViewQuestionAndQuiz.cshtml
+++ b/SEA_Application/Views/AspnetQuestions/ViewQuestionAndQuiz.cshtml
@@ -132,7 +132,7 @@
                         "/" +
                         value3.getFullYear();
 
-                    table.fnAddData([data[index].QuizId, data[index].QuizName, data[index].QuizDescription, dat1, dat2, data[index].QuizCreatedBy, dat3]);
+                    table.fnAddData([ data[index].QuizName+"<input  type=hidden value="+data[index].QuizId+">", data[index].QuizDescription, dat1, dat2, data[index].QuizCreatedBy, dat3]);
 
                 })
                 table.fnDraw();
@@ -159,10 +159,13 @@
 
 
             var td = $(this).children("td");
-            // var userName = $(td[0]).children("input").val();
+             var QuizId = $(td[0]).children("input").val();
 
             //alert($(td[0]).html());
-            var Id = parseInt($(td[0]).html())
+           // var Id = parseInt($(td[0]).html())
+            var Id = parseInt(QuizId);
+
+            //QuizId
             // alert(Id);
             //userName = userName.trim();
             window.location.href = "/AspnetQuizs/Edit?id=" + Id;
@@ -371,7 +374,7 @@
                                 <table class="table1 hover  table-bordered" id="datatable1">
                                     <thead>
                                         <tr>
-                                            <th>ID</th>
+                                            @*<th>ID</th>*@
                                             <th>
                                                 Name
                                             </th>
