--- a/SEA_Application/Views/AspnetSubjectTopics/ViewTopicsAndLessons.cshtml
+++ b/SEA_Application/Views/AspnetSubjectTopics/ViewTopicsAndLessons.cshtml
@@ -102,10 +102,13 @@
 
         $('.table1').on('click', 'tbody tr', function () {
             var td = $(this).children("td");
-            var userName = $(td[0]).children("input").val();
+            var LessonId = $(td[0]).children("input").val();
 
             //alert($(td[0]).html());
-            var Id = parseInt($(td[0]).html())
+        //    var Id = parseInt($(td[0]).html())
+            var Id = parseInt(LessonId);
+
+           // alert(Id); 
             // alert(Id);
             //userName = userName.trim();
             window.location.href = "/AspnetLessons/Edit?id=" + Id;
@@ -124,7 +127,7 @@
 
                 $.each(data, function (index) {
 
-                    table1.fnAddData([data[index].LessonId, data[index].LessonName, data[index].LessonVidoeUrl, data[index].LessonDescription, data[index].LessonDuration, data[index].LessonSubjectTopicName]);
+                    table1.fnAddData([ data[index].LessonName+"<input  type=hidden value="+data[index].LessonId+">", data[index].LessonVidoeUrl, data[index].LessonDescription, data[index].LessonDuration, data[index].LessonSubjectTopicName]);
 
                 })
                 table1.fnDraw();
@@ -318,7 +321,7 @@
                                 <table class="table1 hover table-striped table-bordered" id="datatable1">
                                     <thead>
                                         <tr>
-                                            <th>  ID</th>
+                                            @*<th>  ID</th>*@
                                             <th>
                                                 Name
                                             </th>
