--- a/SEA_Application/Views/Shared/_TeacherDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_TeacherDashboardLayout.cshtml
@@ -3,10 +3,9 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="~/Content/assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="~/Content/assets/img/favicon.png">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>
+    <link rel="apple-touch-icon" sizes="76x76" href="~/Content/assets/assets/img/orignal.png">
+    <link rel="icon" type="image/png" href="~/Content/assets/assets/img/orignal.png">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /> <title>
         Officers Academy
     </title>
     <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
@@ -49,7 +48,7 @@
             -->
             <div class="logo">
                 <a class="simple-text logo-normal" href="#">
-                    <img class="transparent" alt="" src="~/Content/assets/assets/img/logo%20SEA1.png">
+                    <img class="transparent" alt="" src="~/Content/assets/assets/img/orignal.png" height="143" width="143">
                 </a>
             </div>
 
@@ -106,7 +105,7 @@
         </li>*@
 
 
-                    <li class="nav-item active">
+                    <li class="nav-item active hidden">
                         <a href="@(Url.Action("View_Attendance", "Teacher_Dashboard"))" class="nav-link nav-toggle">
                             <i class="sea-dash">
                                 <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
@@ -350,13 +349,15 @@
                             }
                             <li class="nav-item dropdown">
                                 <a class="nav-link p-0" href="javascript:;" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <img style="width: 45px;height: 45px;" src="~/Content/assets/assets/img/Profile.png">
+
+                                    <div id="theDiv"><img id="theImg" src="" /></div>
+
                                     <p class="d-lg-none d-md-block">
                                         Account
                                     </p>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
-                                    <a class="dropdown-item" href="#">Profile</a>
+                                    <a class="dropdown-item" href="/Manage/Index">Profile</a>
                                     <a class="dropdown-item" href="#">Privacy</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="#">Settings</a>
@@ -378,7 +379,7 @@
                                         <h1 id="PageHeader" class="float-left"></h1>
 
                                     </div>
-                                    <div class="col-sm-12 col-md-9 col-lg-9">
+                                    <div class="col-sm-12 col-md-9 col-lg-9 hidden">
                                         <button type="button" class="btn btn-primary pull-right rounded rounded-lg createBtn" id="global_Createbtn">Create</button>
                                         <input type="text" placeholder="Type Keyword" id="global_filter" class="searchBox pull-right pl-4 p-2 pull-right rounded rounded-lg   mr-3">
                                     </div>
@@ -461,7 +462,20 @@
     }
     $(document).ready(function () {
 
+        $("#datatable_filter").hide();
+    
+        $.post(
+                  "/AspNetUser/GetProfilePic",
+                  $(".changepassword-form").serialize(),
+                  function (data) {
 
+                      $('#theDiv').prepend('<img id="theImg" height ="45" width = "45" src="/Content/Images/StudentImages/' + data + '" />')
+
+
+
+                  },
+                  "text"
+              );
         //empty
 
 
